basic gui stuff and commands